syntax = "proto3";

option go_package = ".;pb";
option java_multiple_files = true;
option java_package = "com.aapanavyapar.aapanavyapar.services";

import "signin-message.proto";
import "signup-message.proto";
import "token-message.proto";
import "logout-message.proto";
import "forget-password-message.proto";

service Authentication {
  rpc Signup (SignUpRequest) returns (SignUpResponse);
  rpc ContactConformation (ContactConformationRequest) returns (ContactConformationResponse) {};
  rpc ResendOTP (ResendOTPRequest) returns (ResendOTPResponse) {};

  rpc GetNewToken (NewTokenRequest) returns (NewTokenResponse) {};
  rpc SignIn (SignInRequest) returns (SignInResponse) {};
  rpc Logout (LogoutRequest) returns (LogoutResponse) {};

  rpc ForgetPassword (ForgetPasswordRequest) returns (ForgetPasswordResponse) {};
  rpc ConformForgetPasswordOTP (ConformForgetPasswordOTPRequest) returns (ConformForgetPasswordOTPResponse) {};
  rpc SetNewPassword (SetNewPasswordRequest) returns (SetNewPasswordResponse) {};

}
